--- a/hindi.html
+++ b/hindi.html
@@ -56,7 +56,8 @@
   </div>
 
   <h1>ipl 2025 live</h1>
-  <h2>gt vs mi</h2>
+  <h2>match 1</h2>
+  <h2>srh vs dc</h2>
   <br />
    <!-- adstra code starts-->
    <div class="ad-container">
@@ -77,7 +78,8 @@
   <h3>player 1</h3>
   <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
-  <div id="player"></div>
+  <iframe src="playerjs.html"Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+  <!-- <div id="player"></div>
 
   <script>
     var player = new Playerjs({
@@ -85,13 +87,12 @@
       file: "match1.txt",
       poster: "https://i.ibb.co/1G4N2fgF/welocome-to-our-website.png" 
     });
-  </script>
+  </script> -->
   <br>
   <br>
   <h3>Player 2</h3>
 <br>
-</iframe>
-  <iframe src="jwplayer.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
+<iframe src="jwplayer.html"Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
   </iframe>
   <br>
   <br>
