--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img src="https://i.ibb.co/HD52yVk6/gtvs-mi.jpg" alt="Sample Image" />
+    <img src="https://i.ibb.co/WvwLmXM6/1000109266-imresizer.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
   </a>
 
   <a href="hindi4k.html" class="card">
-    <img src="https://i.ibb.co/JR6qQ4BQ/cskvs-mi-1.jpg" alt="Sample Image" />
+    <img src="https://i.ibb.co/6JpDB1Gr/IPL-2023-Match-37-RR-imresizer.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 2 hindi</div>
     </div>
