--- a/hindi4k.html
+++ b/hindi4k.html
@@ -78,7 +78,7 @@
   <h3>player 1</h3>
   <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <br>
-  <iframe src="playerjs.html" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+  <iframe src="playerjs.html"Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
   <!-- <div id="player"></div>
 
   <script>
@@ -92,8 +92,7 @@
   <br>
   <h3>Player 2</h3>
 <br>
-</iframe>
-  <iframe src="jwplayer.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
+<iframe src="jwplayer.html"Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
   </iframe>
   <br>
   <br>
