--- a/jwplayer.html
+++ b/jwplayer.html
@@ -31,7 +31,7 @@
 
         jwScript.onload = function() {
             var playerInstance = jwplayer("player").setup({
-                file: "https://myctxa.temycssme.wiki/720p.m3u8",
+                file: "https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002",
                 width: "100%",
                 height: "100%",
                 aspectratio: '16:9',
