--- a/player.html
+++ b/player.html
@@ -62,7 +62,7 @@
 
     <script>
         // Video URL
-        const videoUrl = "https://customer-0agod1prlrzpzm4j.cloudflarestream.com/bd4f2a7e5c120843b0c06f9bb992fec9/manifest/video.m3u8";
+        const videoUrl = "https://002.fclplayer.online/live/csstream2/playlist.m3u8?id=1002";
 
         // JW Player setup
         jwplayer("video").setup({
