--- a/hindi.html
+++ b/hindi.html
@@ -15,6 +15,8 @@
     rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dheereshagrwal/coloured-icons@master/src/app/ci.min.css" />
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <!-- Load JW Player library once in head -->
+  <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
   <script defer src="https://us.umami.is/script.js" data-website-id="bff6007c-ed56-49bc-9843-9cd42c50bab5"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-F45FCSPRMB"></script>
   <script>
@@ -27,11 +29,18 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/disable-devtool"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
   <script src="playerjs2.js"></script>
   <style>
     body {
       text-align: center;
+    }
+
+    /* Ensure iframes have a default size */
+    iframe {
+      width: 100%;
+      height: 500px;
+      /* Default height, adjust as needed */
+      border: none;
     }
   </style>
 </head>
@@ -53,196 +62,108 @@
     <img src="https://i.ibb.co/rGyL1012/output-Oybmvw.gif" alt="Animated GIF" />
   </a>
 
-  </div>
-
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>srh vs dc</h2>
-  <h3>player 1</h3>
-  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
-  <br>
-  <iframe src="playerjs.html"Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
-  <!-- <div id="player"></div>
+  <h2>kkr vs mi</h2>
 
+  <h2>player 1</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr> <!-- Added separator -->
+
+  <div id="player"></div>
   <script>
     var player = new Playerjs({
       id: "player",
       file: "match1.txt",
-      poster: "https://i.ibb.co/1G4N2fgF/welocome-to-our-website.png" 
+      poster: "https://i.ibb.co/1G4N2fgF/welocome-to-our-website.png"
     });
-  </script> -->
+  </script>
   <br>
-  <br>
-  <h3>Player 2</h3>
-<br>
-<iframe src="jwplayer.html"Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
+
+  <h2>player 2</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr> <!-- Added separator -->
+
+  <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    loading="lazy">
+  </iframe>
+
+  <h2>player 3</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr> <!-- Added separator -->
+
+  <iframe src="https://iframv2.embedxt.site/iframe/frame.php" title="Video Player 2" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    loading="lazy">
   </iframe>
   <br>
   <br>
-  </div>
-<br>
-  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
-  <br>
-  <h3>player 3</h3>
-  <br>
-  <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
+  <h2>player 3</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr> <!-- Added separator -->
+  <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player 3" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe>
   <br>
-  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
+  <h2>player 4</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
   <br>
-  <h3>Player 4</h3>
+  <hr> <!-- Added separator -->
+  <iframe src="jwplayer.html" title="Video Player JW" frameborder="0" width="100%" height="500"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
   <br>
-  <div id="wrapper">
-    <div id="pcPlayer"></div>
+  <br>
+  <h3>Player 4 (JWPlayer TSPORT)</h3>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr> <!-- Added separator -->
+  <!-- Renamed ID for the first TSPORT player instance -->
+  <div id="wrapper_tsport1">
+    <div id="pcPlayer_tsport1"></div>
   </div>
   <script>
-    var jwScriptHindi = document.createElement("script");
-    jwScriptHindi.src =
-      "https://content.jwplatform.com/libraries/KB5zFt7A.js";
-    jwScriptHindi.async = true;
-
-    jwScriptHindi.onerror = function () {
-      console.error("Failed to load JW Player library (Hindi).");
-      document.getElementById("pcPlayer").innerHTML =
-        "<p>Error loading video player (Hindi).</p>";
-    };
-
-    jwScriptHindi.onload = function () {
-      var playerInstanceHindi = jwplayer("pcPlayer").setup({
-        file: "https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8",
-        width: "100%",
-        aspectratio: "16:9",
-        preload: "metadata",
-        autostart: false,
-        fallback: {
-          message:
-            "Your browser does not support the video format or the player.",
-        },
-        events: {
-          onError: function (e) {
-            console.error("JW Player error (Hindi):", e);
-            alert("A JW Player error occurred (Hindi): " + e.message);
+    // No need to dynamically load JWPlayer script again, it's in the head
+    document.addEventListener('DOMContentLoaded', function () { // Wait for DOM ready
+      try {
+        var playerInstanceHindi1 = jwplayer("pcPlayer_tsport1").setup({
+          file: "https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8",
+          width: "100%",
+          aspectratio: "16:9",
+          preload: "metadata",
+          autostart: false,
+          fallback: {
+            message: "Your browser does not support the video format or the player.",
           },
-        },
-        pip: true,
-        controls: true,
-        title: "TSPORTS",
-        quality: {
-          defaultAuto: true,
-        },
-      });
-
-      playerInstanceHindi.on("controls", function (event) {
-        console.log("Controls event (Hindi):", event);
-      });
-
-      playerInstanceHindi.on("displayClick", function (event) {
-        console.log("displayClick event (Hindi):", event);
-      });
-
-      playerInstanceHindi.on("ready", function (event) {
-        console.log("Player ready (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("visualQuality", function (event) {
-        console.log("Visual quality changed (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("bufferChange", function (event) {
-        console.log("Buffer change (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("meta", function (event) {
-        console.log("Meta data (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("fullscreen", function (event) {
-        console.log("Full screen event (Hindi)", event);
-      });
-    };
-    document.head.appendChild(jwScriptHindi);
+          events: {
+            onError: function (e) { // Use onError (capital O)
+              console.error("JW Player error (TSPORT 1):", e);
+              // alert("A JW Player error occurred (TSPORT 1): " + e.message); // Alert can be annoying
+            },
+            // Add other events if needed
+            ready: function (event) { console.log("Player ready (TSPORT 1)", event); },
+          },
+          pip: true,
+          controls: true,
+          title: "TSPORTS 1",
+          quality: { defaultAuto: true },
+        });
+      } catch (error) {
+        console.error("Failed to initialize JW Player (TSPORT 1):", error);
+        document.getElementById("pcPlayer_tsport1").innerHTML = "<p>Error loading video player (TSPORT 1).</p>";
+      }
+    });
   </script>
   <br>
-
-  <br>
-  <!-- <h2>WPL Server</h2> -->
-  <div id="wrapper">
-    <div id="pcPlayer"></div>
-  </div>
-  <script>
-    var jwScriptHindi = document.createElement("script");
-    jwScriptHindi.src = "https://content.jwplatform.com/libraries/KB5zFt7A.js";
-    jwScriptHindi.async = true;
-
-    jwScriptHindi.onerror = function () {
-      console.error("Failed to load JW Player library (Hindi).");
-      document.getElementById("pcPlayer").innerHTML = "<p>Error loading video player (Hindi).</p>";
-    };
-
-    jwScriptHindi.onload = function () {
-      var playerInstanceHindi = jwplayer("pcPlayer").setup({
-        file: "https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8",
-        width: "100%",
-        aspectratio: "16:9",
-        preload: "metadata",
-        autostart: false,
-        fallback: {
-          message: "Your browser does not support the video format or the player."
-        },
-        events: {
-          error: function (e) {
-            console.error("JW Player error (Hindi):", e);
-            alert("A JW Player error occurred (Hindi): " + e.message);
-          }
-        },
-        pip: true,
-        controls: true,
-        title: "tsports",
-        quality: {
-          defaultAuto: true
-        }
-      });
-
-      playerInstanceHindi.on("controls", function (event) {
-        console.log("Controls event (Hindi):", event);
-      });
-
-      playerInstanceHindi.on("displayClick", function (event) {
-        console.log("displayClick event (Hindi):", event);
-      });
-
-      playerInstanceHindi.on("ready", function (event) {
-        console.log("Player ready (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("visualQuality", function (event) {
-        console.log("Visual quality changed (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("bufferChange", function (event) {
-        console.log("Buffer change (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("metaData", function (event) {
-        console.log("Meta data (Hindi)", event);
-      });
-
-      playerInstanceHindi.on("fullScreen", function (event) {
-        console.log("Full screen event (Hindi)", event);
-      });
-    };
-    document.head.appendChild(jwScriptHindi);
-  </script>
-
-  <br />
-  <br />
-  <h2>📌note: please cheack all servers and players multiple servers addedd</h2>
   <h3>player 5</h3>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
+  <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
+    allowfullscreen>
+  </iframe>
   <br>
-    <iframe src="willowsports.html" width="100%" height="100%" frameborder="0" allowfullscreen="">
-    </iframe>
-    <br>
-    <br>
+  <br>
+
   <h2>
     Developed by <a href="https://github.com/NEWBIENOOB-0">NEWBIENOOB-0</a>
   </h2>
@@ -254,25 +175,24 @@
       <h2>Follow Us</h2>
       <p class="blue-text">Connect with us on social media:</p>
       <a href="https://www.linkedin.com/in/newbienoob/" target="_blank">
-        <img src="https://i.ibb.co/Rk5LY4Kk/linkedin.png" style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="LinkedIn"/>
-      
+        <img loading="lazy" src="https://i.ibb.co/Rk5LY4Kk/linkedin.png"
+          style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="LinkedIn" />
       </a>
       <a href="https://github.com/NOOBGLITCH" target="_blank">
-        <img src="https://i.ibb.co/VWntHwKD/github.png" style="height: 45px; vertical-align: middle;" alt="GitHub"/>
-        
+        <img loading="lazy" src="https://i.ibb.co/VWntHwKD/github.png" style="height: 45px; vertical-align: middle;"
+          alt="GitHub" />
       </a>
- 
       <a href="https://www.instagram.com/NEWBIENOOBO" target="_blank">
-        <img src="https://i.ibb.co/Fbs4Ct9C/inastagram.png" style="height: 45px; vertical-align: middle; margin-right: 5px;" alt="Instagram"/>
-
+        <img loading="lazy" src="https://i.ibb.co/Fbs4Ct9C/inastagram.png"
+          style="height: 45px; vertical-align: middle; margin-right: 5px;" alt="Instagram" />
       </a>
       <a href="https://x.com/NEWBIENOOBO" target="_blank">
-        <img src="https://i.ibb.co/xtJgXtD9/twitter.png" style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Twitter"/>
+        <img loading="lazy" src="https://i.ibb.co/xtJgXtD9/twitter.png"
+          style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Twitter" />
       </a>
-
       <a href="https://telegram.me/newbienoobbot" target="_blank">
-        <img src="https://i.ibb.co/ks9HGdCS/telegram.png" style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Telegram"/>
-  
+        <img loading="lazy" src="https://i.ibb.co/ks9HGdCS/telegram.png"
+          style="height: 40px; vertical-align: middle; margin-right: 5px;" alt="Telegram" />
       </a>
     </div>
   </div>
