--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
   </div>
   <br>
   <a href="http://telegram.dog/NEWBIEN00B" class="card">
-    <img src="https://i.ibb.co/MFngWCb/tg.jpg" alt="Sample Image" />
+    <img  loading="lazy" src="https://i.ibb.co/MFngWCb/tg.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Telegram</div>
     </div>
   </a>
   
   <a href="https://github.com/NOOBGLITCH" class="card">
-    <img src="https://i.pinimg.com/564x/b5/1b/78/b51b78ecc9e5711274931774e433b5e6.jpg" alt="Sample Image" />
+    <img  loading="lazy" src="https://i.pinimg.com/564x/b5/1b/78/b51b78ecc9e5711274931774e433b5e6.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Github</div>
     </div>
   </a>
 
   <a href="hindi.html" class="card">
-    <img src="https://i.ibb.co/WvwLmXM6/1000109266-imresizer.png" alt="Sample Image" />
+    <img  loading="lazy" src="https://i.ibb.co/hxbY65MP/mivskkkr.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
   </a>
 
   <a href="hindi4k.html" class="card">
-    <img src="https://i.ibb.co/6JpDB1Gr/IPL-2023-Match-37-RR-imresizer.png" alt="Sample Image" />
+    <img  loading="lazy"  src="https://i.ibb.co/6JpDB1Gr/IPL-2023-Match-37-RR-imresizer.png" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 2 hindi</div>
     </div>
