--- a/hindi.html
+++ b/hindi.html
@@ -66,9 +66,9 @@
   <h2>match 1</h2>
   <h2>kkr vs mi</h2>
 
-  <h2>player 1</h2>
+  <!-- <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> <!-- Added separator -->
+  <hr> 
 
   <div id="player"></div>
   <script>
@@ -82,14 +82,14 @@
 
   <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> <!-- Added separator -->
+  <hr> Added separator
 
   <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
-  </iframe>
+  </iframe> -->
 
-  <h2>player 3</h2>
+  <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
 
@@ -99,23 +99,16 @@
   </iframe>
   <br>
   <br>
-  <h2>player 3</h2>
+  <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player 3" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe>
   <br>
-  <h2>player 4</h2>
-  <h2>📌note: please check all servers and players multiple servers added</h2>
-  <br>
-  <hr> <!-- Added separator -->
-  <iframe src="jwplayer.html" title="Video Player JW" frameborder="0" width="100%" height="500"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  </iframe>
   <br>
   <br>
-  <h3>Player 4 (JWPlayer TSPORT)</h3>
+  <h3>Player 3</h3>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <!-- Renamed ID for the first TSPORT player instance -->
