--- a/hindi.html
+++ b/hindi.html
@@ -88,8 +88,15 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe> -->
+<h2>player 1</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr> <!-- Added separator -->
 
-  <h2>player 1</h2>
+  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239043&hd=2&autoplay=1" title="Video Player 2" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    loading="lazy">
+  </iframe>
+  <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
 
@@ -99,7 +106,7 @@
   </iframe>
   <br>
   <br>
-  <h2>player 2</h2>
+  <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player 3" frameborder="0"
