--- a/jwplayer.html
+++ b/jwplayer.html
@@ -48,7 +48,7 @@
                 },
                 pip: true,
                 controls: true,
-                title: "jiohotstar hindi"
+                title: "star sports 1 hindi"
             });
 
             playerInstance.on('controls', function(event) {
