--- a/hindi.html
+++ b/hindi.html
@@ -58,15 +58,17 @@
       <li><a href="contact.html">Contact Us</a></li>
     </ul>
   </nav>
-  <a href="https://lnk.bio/NEWBIENOOB" class="responsive-gif">
-    <img src="https://i.ibb.co/rGyL1012/output-Oybmvw.gif" alt="Animated GIF" />
-  </a>
-
+<a href="https://lnk.bio/NEWBIENOOB" class="responsive-gif">
+  <img loading="lazy" src="https://i.ibb.co/rGyL1012/output-Oybmvw.gif" alt="Animated GIF"/>
+</a>
+<a href="https://ublockorigin.com/">
+  <img loading="lazy" src="https://i.ibb.co/bjNG66z1/2.png" alt="Sample Image" width="auto%" height="180" />
+</a>
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
-  <h2>kkr vs mi</h2>
+  <h2>pbks vs lsg</h2>
 
-  <!-- <h2>player 1</h2>
+  <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> 
 
@@ -79,27 +81,31 @@
     });
   </script>
   <br>
-
-  <h2>player 2</h2>
+  <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> Added separator
+  <hr>
+  <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239051&hd=1"  allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+
+  <br>
+  <h2>player 4</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
 
   <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
-  </iframe> -->
-
-  <h2>player 1</h2>
+  </iframe>
+  <br>
+  <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> <!-- Added separator -->
-
+  <hr> 
   <iframe src="https://iframv2.embedxt.site/iframe/frame.php" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
   </iframe>
   <br>
   <br>
-  <h2>player 2</h2>
+  <h2>player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player 3" frameborder="0"
@@ -108,7 +114,7 @@
   <br>
   <br>
   <br>
-  <h3>Player 3</h3>
+  <h3>Player 7</h3>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <!-- Renamed ID for the first TSPORT player instance -->
@@ -148,7 +154,16 @@
     });
   </script>
   <br>
-  <h3>player 5</h3>
+  <h2>player 3</h2>
+  <h2>📌note: please check all servers and players multiple servers added</h2>
+  <hr>
+
+  <iframe src="playercopy.html" title="Video Player 2" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    loading="lazy">
+  </iframe>
+  <br>
+  <h3>player 8</h3>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
