--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </a>
 
   <a href="hindi.html" class="card">
-    <img  loading="lazy" src="https://i.ibb.co/hxbY65MP/mivskkkr.png" alt="Sample Image" />
+    <img  loading="lazy" src="https://i.ibb.co/YFXpYCFg/x.jpg" alt="Sample Image" />
     <div class="card-content">
       <div class="card-title">Match no 1 Hindi</div>
     </div>
