--- a/hindi.html
+++ b/hindi.html
@@ -67,7 +67,7 @@
   <h1>ipl 2025 live</h1>
   <h2>match 1</h2>
   <h2>pbks vs lsg</h2>
-
+<hr>
   <h2>player 1</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> 
@@ -81,24 +81,24 @@
     });
   </script>
   <br>
-  <h2>player 3</h2>
+  <h2>player 2</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="https://vk.com/video_ext.php?oid=889693256&id=456239051&hd=1"  allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
   <br>
-  <h2>player 4</h2>
+  <h2>player 3</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
   <iframe src="jwplayer.html" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     loading="lazy">
-  </iframe> -->
+  </iframe> 
 
-  <h2>player 1</h2>
+  <h2>player 4</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
-  <hr> <!-- Added separator -->
+  <hr>
 
   <iframe src="https://iframv2.embedxt.site/iframe/frame.php" title="Video Player 2" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
@@ -106,7 +106,7 @@
   </iframe>
   <br>
   <br>
-  <h2>player 2</h2>
+  <h2>player 5</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <iframe src="https://ifram.embedxt.site/iframe/frame.php" title="Video Player 3" frameborder="0"
@@ -115,7 +115,7 @@
   <br>
   <br>
   <br>
-  <h3>Player 7</h3>
+  <h2>Player 6</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr> <!-- Added separator -->
   <!-- Renamed ID for the first TSPORT player instance -->
@@ -155,7 +155,7 @@
     });
   </script>
   <br>
-  <h2>player 3</h2>
+  <h2>player 7</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
 
@@ -164,7 +164,7 @@
     loading="lazy">
   </iframe>
   <br>
-  <h3>player 8</h3>
+  <h2>player 8</h2>
   <h2>📌note: please check all servers and players multiple servers added</h2>
   <hr>
   <iframe src="willowsports.html" title="Willow Sports Player" width="100%" height="500" frameborder="0"
